--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 :root {
   --grid: 20px;
   --color-purple: #755de2;
+  --color-orange: #f37e2f;
 }
 @font-face {
   font-family: "gela";
@@ -24,29 +25,60 @@ a {
   text-decoration: none;
 }
 .button {
-  border-radius: calc(var(--grid) / 4 * 3);
-  padding: calc(var(--grid) / 4 * 3) calc(var(--grid) * 3);
+  display: inline-flex;
   background: var(--color-purple);
+  border-radius: calc(var(--grid) / 4 * 3);
   color: white;
+  line-height: 1;
+  padding: calc(var(--grid) / 4 * 3) calc(var(--grid) * 3);
 }
 p {
   color: var(--color-purple);
+  margin-top: calc(2 * var(--grid));
+  margin-bottom: calc(2 * var(--grid));
+  opacity: 0.7;
 }
 h1 {
   position: relative;
   z-index: 0;
   font-family: "gela";
-  font-size: 2.2rem;
+  font-size: 2.4rem;
   color: #e3fffd;
   margin-top: calc(-1 * var(--grid));
+  margin-bottom: calc(2 * var(--grid));
+  filter: drop-shadow(0 0 0.35rem rgba(255, 255, 255, 0.3));
+}
+h2 {
+  position: relative;
+  z-index: 0;
+  font-family: "gela";
+  font-size: 1.8rem;
+  color: var(--color-purple);
+  margin-top: var(--grid);
+  margin-bottom: 0;
+}
+.caps {
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: var(--color-purple);
+}
+
+.image {
+  margin: auto;
+  max-width: 400px;
 }
 img {
   display: block;
   width: 100%;
 }
 
+.orange {
+  color: var(--color-orange);
+}
+
 header {
-  margin-bottom: var(--grid);
+  margin-bottom: calc(2 * var(--grid));
 }
 header .button {
   display: none;
@@ -54,7 +86,7 @@ header .button {
 .app-title {
   font-family: "gela";
   color: white;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
 }
 .app-icon {
   display: none;
@@ -78,5 +110,8 @@ section {
 @media screen and (min-width: 1024px) {
   body {
     font-size: 22px;
+  }
+  .intro-wrapper-mobile {
+    display: none;
   }
 }
