--- a/index.css
+++ b/index.css
@@ -1,29 +1,28 @@
+@font-face {
+  font-family: "gela";
+  src: url("/fonts/gela.woff2") format("woff2"), url("/fonts/gela.woff") format("woff");
+  font-weight: normal;
+  font-style: normal; }
 :root {
   --grid: 20px;
   --color-purple: #755de2;
-  --color-orange: #f37e2f;
-}
-@font-face {
-  font-family: "gela";
-  src: url("/fonts/gela.woff2") format("woff2"),
-    url("/fonts/gela.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
-}
+  --color-orange: #f37e2f; }
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   font-size: 20px;
-  text-align: center;
-}
+  text-align: center; }
+  @media only screen and (min-width: 1024px) {
+    body {
+      font-size: 22px; } }
 
 a {
-  text-decoration: none;
-}
+  text-decoration: none; }
+
 .button {
   display: inline-flex;
   background: var(--color-purple);
@@ -31,94 +30,111 @@ a {
   color: white;
   line-height: 1;
   padding: calc(var(--grid) / 4 * 3) calc(var(--grid) * 3);
-}
-p {
-  color: var(--color-purple);
-  margin-top: calc(2 * var(--grid));
-  margin-bottom: calc(2 * var(--grid));
-  opacity: 0.7;
-}
+  transition: background 0.3s cubic-bezier(0.66, 0, 0.07, 1); }
+  .button:hover {
+    background: var(--color-orange); }
+
 h1 {
-  position: relative;
-  z-index: 0;
   font-family: "gela";
-  font-size: 2.4rem;
+  font-size: 12vw;
   color: #e3fffd;
-  margin-top: calc(-1 * var(--grid));
+  margin-top: calc(-1.5 * var(--grid));
   margin-bottom: calc(2 * var(--grid));
-  filter: drop-shadow(0 0 0.35rem rgba(255, 255, 255, 0.3));
-}
+  filter: drop-shadow(0 0 0.35rem rgba(255, 255, 255, 0.3)); }
+  @media only screen and (min-width: 1024px) {
+    h1 {
+      font-size: 6rem;
+      margin-top: calc(-2 * var(--grid));
+      margin-bottom: calc(2 * var(--grid)); } }
+
 h2 {
   position: relative;
   z-index: 0;
   font-family: "gela";
-  font-size: 1.8rem;
+  font-size: 8vw;
   color: var(--color-purple);
   margin-top: var(--grid);
-  margin-bottom: 0;
-}
+  margin-bottom: 0; }
+  @media only screen and (min-width: 1024px) {
+    h2 {
+      font-size: 4rem;
+      margin: 0;
+      width: 60%;
+      max-width: 700px; } }
+
 .caps {
   text-transform: uppercase;
   font-size: 0.8rem;
   font-weight: bold;
   color: var(--color-purple);
-}
+  transition: color 0.3s cubic-bezier(0.66, 0, 0.07, 1); }
+  .caps:hover {
+    color: var(--color-orange); }
 
 .image {
   margin: auto;
-  max-width: 400px;
-}
+  max-width: 300px; }
+  @media only screen and (min-width: 1024px) {
+    .image {
+      width: 40%;
+      max-width: 400px; } }
+
 img {
   display: block;
-  width: 100%;
-}
+  width: 100%; }
 
 .orange {
-  color: var(--color-orange);
-}
+  color: var(--color-orange); }
 
 header {
-  margin-bottom: calc(2 * var(--grid));
-}
-header .button {
-  display: none;
-}
-.app-title {
-  font-family: "gela";
-  color: white;
-  font-size: 1.8rem;
-}
-.app-icon {
-  display: none;
-}
+  margin-bottom: calc(2 * var(--grid)); }
+  header .button {
+    display: none; }
+  header .app-title {
+    font-family: "gela";
+    color: white;
+    font-size: 8vw; }
+    @media only screen and (min-width: 1024px) {
+      header .app-title {
+        font-size: 2.2rem; } }
+  header .app-icon {
+    display: none; }
 
 section {
-  padding: var(--grid);
-}
-.intro {
-  background: linear-gradient(
-    0deg,
-    rgba(249, 248, 253, 1) 0%,
-    rgba(135, 193, 243, 1) 60%
-  );
-}
-.intro .image {
-  position: relative;
-  z-index: 1;
-}
+  padding: var(--grid); }
+  @media only screen and (min-width: 1024px) {
+    section .wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      justify-content: center;
+      margin: auto;
+      max-width: 1024px; } }
+  @media only screen and (min-width: 1024px) {
+    section.section-2 h2 {
+      order: 1; }
+    section.section-2 .image {
+      order: 2; } }
+  @media only screen and (min-width: 1024px) {
+    section.section-3 {
+      background: linear-gradient(0deg, #eec9fc 0%, #755de2 80%); } }
+  @media only screen and (min-width: 1024px) {
+    section.section-3 h2 {
+      color: #e3fffd;
+      filter: drop-shadow(0 0 0.35rem rgba(255, 255, 255, 0.3)); } }
 
-@media screen and (min-width: 1024px) {
-  body {
-    font-size: 22px;
-  }
-  .intro-wrapper-mobile {
-    display: none;
-  }
-  h1 {
-    font-size: 6rem;
+.intro {
+  display: block;
+  background: linear-gradient(0deg, #f9f8fd 0%, #87c1f3 60%); }
+  .intro .image {
+    position: relative;
+    z-index: 1; }
+  .intro p {
+    color: var(--color-purple);
     margin: auto;
-    margin-top: calc(-2 * var(--grid));
+    margin-top: calc(2 * var(--grid));
     margin-bottom: calc(2 * var(--grid));
-    max-width: 800px;
-  }
-}
+    max-width: 600px;
+    opacity: 0.7; }
+
+/*# sourceMappingURL=index.css.map */
