--- a/index.css
+++ b/index.css
@@ -158,18 +158,38 @@ section {
         display: block;
         max-width: inherit;
         width: 100%; } }
-  section.section-5 h2 {
-    font-size: 12vw; }
-    @media only screen and (min-width: 1024px) {
-      section.section-5 h2 {
-        font-size: 4rem;
-        max-width: 600px; } }
-  section.section-5 p {
-    color: var(--color-purple);
-    margin: auto;
-    margin-top: 0;
-    margin-bottom: 0;
-    max-width: 600px;
-    opacity: 0.7; }
+  section.section-5 {
+    padding-bottom: 0; }
+    section.section-5 h2 {
+      font-size: 12vw; }
+      @media only screen and (min-width: 1024px) {
+        section.section-5 h2 {
+          font-size: 4rem;
+          margin: auto;
+          max-width: 600px; } }
+    section.section-5 p {
+      color: var(--color-purple);
+      margin: auto;
+      margin-top: calc(2 * var(--grid));
+      margin-bottom: calc(2 * var(--grid));
+      max-width: 600px;
+      opacity: 0.7; }
+
+footer .button {
+  margin-bottom: calc(2 * var(--grid)); }
+footer nav {
+  margin-bottom: calc(2 * var(--grid)); }
+  footer nav a {
+    display: block;
+    margin-bottom: calc(0.5 * var(--grid)); }
+footer div {
+  margin-bottom: calc(2 * var(--grid)); }
+  footer div a {
+    display: block;
+    margin: auto; }
+    footer div a:first-child {
+      width: 180px; }
+    footer div a:nth-child(2) {
+      width: 40px; }
 
 /*# sourceMappingURL=index.css.map */
