--- a/index.css
+++ b/index.css
@@ -37,6 +37,7 @@ a {
 h1 {
   font-family: "gela";
   font-size: 12vw;
+  letter-spacing: -1px;
   color: #e3fffd;
   margin-top: calc(-1.5 * var(--grid));
   margin-bottom: calc(2 * var(--grid));
